--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8081"
+  "proxy": "https://msabackend-production.up.railway.app"
 }
